@@ -1,5 +1,6 @@
 2017-11-18 16:36:00
 ===================
+Copyright year update
 PHP min version checks for extension installs
 != changed to !==
 function re-definition avoidance check
